# git-recap

./: .gitignore  README.md
.github/workflows/: pipeline.yaml
backend/: pyproject.toml  settings.env  settings.yaml  setup.cfg
backend/app/: __main__.py  config.py
backend/app/lib/: ai_summarization.py  github_connector.py  recap.py
backend/tests/unit/: test_config.py
backend/tests/unit/lib/: test_ai_summarization.py  test_github_connector.py  test_recap.py
git-recap/: pyproject.toml  settings.env  setup.cfg
git-recap/app/: __main__.py  config.py
git-recap/app/lib/: github_connector.py
